<resources>
    <string name="app_name">Guess The Music</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="time_left">Time Left</string>
    <string name="volume_textView">Volume</string>
    <string name="submit">Submit</string>
    <string name="send_high_score">Highscore</string>
    <string name="send_name">Name</string>
</resources>